--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,13 @@
     />
     <title>Stencil Component Starter</title>
 
+    <style>
+      :root {
+        --theme-background: white;
+        --theme-border: #aaaaaa;
+      }
+    </style>
+
     <script type="module" src="/build/mf-users.esm.js"></script>
     <script nomodule src="/build/mf-users.js"></script>
   </head>
