--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,13 @@
     <script nomodule src="/build/mf-users.js"></script>
   </head>
   <body>
-    <mf-users></mf-users>
+    <mf-users id="usersElement"></mf-users>
+
+    <script>
+      const usersElement = document.querySelector('#usersElement');
+      usersElement.addEventListener('outClickedItem', event => {
+        console.log('Event', event);
+      });
+    </script>
   </body>
 </html>
