--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <script>
       const usersElement = document.querySelector('#usersElement');
       usersElement.addEventListener('outClickedItem', event => {
-        console.log('Event', event);
+        console.log('Event', event.detail);
       });
     </script>
   </body>
